--- a/src/app/view/contact/contact.component.html
+++ b/src/app/view/contact/contact.component.html
@@ -2,9 +2,9 @@
   <table>
     <thead>
     <tr>
-      <th style="width: 20%">Name</th>
-      <th style="width: 20%">Contact type</th>
-      <th style="width: 60%">Value</th>
+      <th style="width: 20%">{{locale().label.name}}</th>
+      <th style="width: 20%">{{locale().label.contactType}}</th>
+      <th style="width: 60%">{{locale().label.value}}</th>
     </tr>
     </thead>
     <tbody *ngFor="let contact of contacts">
@@ -18,9 +18,9 @@
 </div>
 <mat-toolbar class="mat-paginator-sticky">
   <button mat-raised-button style="margin-right: 20px" (click)="openContactDetails(null)">
-    Add contact
+    {{locale().label.addContact}}
   </button>
   <button mat-raised-button>
-    Delete selected contacts
+    {{locale().label.deleteSelectedContacts}}
   </button>
 </mat-toolbar>
