--- a/src/app/view/contact/contact.details.html
+++ b/src/app/view/contact/contact.details.html
@@ -33,30 +33,30 @@
     width: 120px;
   }
 </style>
-<h2>Contact details</h2>
+<h2>{{locale().label.contactDetails}}</h2>
 <mat-divider style="margin-bottom: 10px"></mat-divider>
 <mat-form-field appearance="fill">
-  <mat-label>Contact name</mat-label>
+  <mat-label>{{locale().label.contactName}}</mat-label>
   <input matInput [(ngModel)]="contact.name" required>
 </mat-form-field>
 <br>
 <div>
-  <label>Contact type: </label>
+  <label>{{locale().label.contactType}}: </label>
   <mat-radio-group [(ngModel)]="contact.contactType.contactTypeId" >
     <mat-radio-button *ngFor="let contactType of contactTypes" [value]="contactType.contactTypeId">{{contactType.name}}</mat-radio-button>
   </mat-radio-group>
 </div>
 <br>
 <mat-form-field appearance="fill">
-  <mat-label>Value</mat-label>
+  <mat-label>{{locale().label.value}}</mat-label>
   <input matInput [(ngModel)]="contact.value" required>
 </mat-form-field>
 <mat-divider></mat-divider>
 <div style="place-content: end; margin-top: 10px; float: right">
   <button mat-raised-button style="margin-right: 10px" (click)="saveContact()">
-    Save
+    {{locale().label.save}}
   </button>
   <button #contactCloseButton mat-raised-button mat-dialog-close>
-    Close
+    {{locale().label.close}}
   </button>
 </div>
