--- a/src/app/view/main/main.component.css
+++ b/src/app/view/main/main.component.css
@@ -253,3 +253,21 @@ mat-divider {
 #pac-input:focus {
   border-color: #4d90fe;
 }
+.wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
+.spinner-wrapper {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
