--- a/src/app/view/product/product.details.html
+++ b/src/app/view/product/product.details.html
@@ -7,15 +7,15 @@
     width: 100%;
   }
 </style>
-<h2>Product details</h2>
+<h2>{{locale().label.productDetails}}</h2>
 <mat-divider style="margin-bottom: 10px"></mat-divider>
 <mat-form-field appearance="fill">
-  <mat-label>Product name</mat-label>
+  <mat-label>{{locale().label.productName}}</mat-label>
   <input matInput [(ngModel)]="product.name" required>
 </mat-form-field>
 <br>
 <mat-form-field appearance="fill">
-  <mat-label>Select product category</mat-label>
+  <mat-label>{{locale().label.selectProductCategory}}</mat-label>
   <mat-select [(ngModel)]="product.productCategory.productCategoryId" required>
     <mat-option *ngFor="let productCategory of productCategories"
                 [value]="productCategory.productCategoryId">{{productCategory.name}}</mat-option>
@@ -23,7 +23,7 @@
 </mat-form-field>
 <br>
 <input #fileInput hidden type="file" (change)="filesUploaded($event)" accept="image/jpeg,image/jpg,image/png"/>
-<button mat-raised-button style="margin-bottom: 10px" (click)="fileInput.click()">Upload images</button>
+<button mat-raised-button style="margin-bottom: 10px" (click)="fileInput.click()">{{locale().label.uploadImages}}</button>
 <br>
 <div style="overflow-y: auto; max-height: 280px;padding: 15px">
   <div *ngFor="let attachment of productAttachments; let index = index" [attr.data-index]="index"
@@ -33,24 +33,24 @@
          style="max-height: 300px; max-width: 300px; margin-right: 20px">
     <div style="width: 300px">
       <mat-checkbox style="margin-right: 20px" [(ngModel)]="attachment.main" [checked]="attachment.main"
-                    (change)="mainImageChanged(index)">Main
+                    (change)="mainImageChanged(index)">{{locale().label.mainImage}}
       </mat-checkbox>
-      <mat-checkbox [(ngModel)]="attachment.delete" [checked]="attachment.delete">Delete</mat-checkbox>
+      <mat-checkbox [(ngModel)]="attachment.delete" [checked]="attachment.delete">{{locale().label.delete}}</mat-checkbox>
     </div>
     <br>
   </div>
 </div>
 <br>
 <mat-form-field appearance="fill" style="width: 650px">
-  <mat-label>Description</mat-label>
+  <mat-label>{{locale().label.description}}</mat-label>
   <textarea matInput style="height: 200px" [(ngModel)]="product.description"></textarea>
 </mat-form-field>
 <mat-divider></mat-divider>
 <div style="place-content: end; margin-top: 10px; float: right">
   <button mat-raised-button style="margin-right: 10px" (click)="saveProduct()">
-    Save
+    {{locale().label.save}}
   </button>
   <button #productCloseButton mat-raised-button mat-dialog-close>
-    Close
+    {{locale().label.close}}
   </button>
 </div>
