--- a/src/app/view/userCard/userCard.details.html
+++ b/src/app/view/userCard/userCard.details.html
@@ -33,15 +33,15 @@
     width: 120px;
   }
 </style>
-<h2>User card details</h2>
+<h2>{{locale().label.userCardDetails}}</h2>
 <mat-divider style="margin-bottom: 10px"></mat-divider>
 <mat-form-field appearance="fill">
-  <mat-label>Card name</mat-label>
+  <mat-label>{{locale().label.cardName}}</mat-label>
   <input matInput [(ngModel)]="userCard.name" required>
 </mat-form-field>
 <br>
 <div>
-  <label>Action type: </label>
+  <label>{{locale().label.actionType}}: </label>
   <mat-radio-group [(ngModel)]="userCard.actionType" >
     <mat-radio-button [value]="actionTypes.BUYER">Buyer</mat-radio-button>
     <mat-radio-button [value]="actionTypes.SELLER">Seller</mat-radio-button>
@@ -49,7 +49,7 @@
 </div>
 <br>
 <div>
-  <label>User type: </label>
+  <label>{{locale().label.userType}}: </label>
   <mat-radio-group [(ngModel)]="userCard.userType">
     <mat-radio-button [value]="userTypes.INDIVIDUAL">Individual</mat-radio-button>
     <mat-radio-button [value]="userTypes.PHYSICAL">Physical</mat-radio-button>
@@ -58,20 +58,20 @@
 </div>
 <br>
 <mat-form-field appearance="fill">
-  <mat-label>Inn</mat-label>
+  <mat-label>{{locale().label.inn}}</mat-label>
   <input matInput type="number" [(ngModel)]="userCard.inn">
 </mat-form-field>
 <br>
 <mat-form-field appearance="fill" style="width: 650px">
-  <mat-label>Description</mat-label>
+  <mat-label>{{locale().label.description}}</mat-label>
   <textarea matInput style="height: 200px" [(ngModel)]="userCard.description"></textarea>
 </mat-form-field>
 <mat-divider></mat-divider>
 <div style="place-content: end; margin-top: 10px; float: right">
   <button mat-raised-button style="margin-right: 10px" (click)="saveCard()">
-    Save
+    {{locale().label.save}}
   </button>
   <button #userCardCloseButton mat-raised-button mat-dialog-close>
-    Close
+    {{locale().label.close}}
   </button>
 </div>
